Fix: userContents - Remove Scrollabr color
Original:
- Background: #f0f0f0
- Default:    #CDCDCD
- Hover:      #A6A6A6
- Drag:       #606060

Scrollbar Code:
- Background: #B8B8BA
- Default:    #D2D2D4
- Hover:      #BFBFC1
- Drag:       #9E9E9F

This is very bad for accessibility.
Ref: https://black7375.tistory.com/84 comments

--- a/userContent.css
+++ b/userContent.css
@@ -274,8 +274,6 @@
       --card-outline-color: var(--grey-60);
 
       --dialog-warning-text-color: var(--red-40);
-
-      scrollbar-color: rgba(249,249,250,.4) rgba(20,20,25,.3);
     }
 
   /*= Addons.org =============================================================*/
